--- a/index.html
+++ b/index.html
@@ -4,166 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go Stars E-Sports</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #0A0A0A;
-            color: #FFFFFF;
-        }
-        header {
-            background-color: #1E3A8A;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-        }
-        h1 {
-            margin: 0;
-            font-size: 2.5em;
-            color: #FBBF24;
-        }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            color: #FBBF24;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2em;
-            transition: color 0.3s;
-        }
-        nav a:hover {
-            color: #FFD700;
-        }
-        .container {
-            max-width: 1200px; /* Limitar a largura máxima */
-            margin: 0 auto; /* Centralizar o contêiner */
-            display: grid;
-            grid-template-columns: 1fr 300px;
-            gap: 20px;
-            padding: 20px;
-        }
-        .main-content {
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-        }
-        .button {
-            background-color: #FBBF24;
-            color: #1E3A8A;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1.2em;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #FFD700;
-        }
-        section {
-            margin: 20px 0;
-            padding: 20px;
-            border: 1px solid #FBBF24;
-            border-radius: 10px;
-            background-color: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-        }
-        footer {
-            background-color: #1E3A8A;
-            padding: 10px;
-            text-align: center;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .gallery img {
-            width: 200px;
-            height: 150px;
-            margin: 10px;
-            border-radius: 10px;
-            border: 2px solid #FBBF24;
-            transition: transform 0.3s;
-        }
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
-        .carousel {
-            position: relative;
-            width: 100%;
-            margin: auto;
-            overflow: hidden;
-        }
-        .carousel-content {
-            display: flex;
-            transition: transform 0.5s ease;
-            width: 100%;
-        }
-        .carousel-item {
-            min-width: 100%;
-            box-sizing: border-box;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border: 1px solid #FBBF24;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        .carousel-button {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: #FBBF24;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            padding: 10px;
-            font-size: 1.2em;
-            color: #1E3A8A;
-        }
-        .carousel-button.left {
-            left: 10px;
-        }
-        .carousel-button.right {
-            right: 10px;
-        }
-
-        /* Estilos para responsividade */
-        @media (max-width: 768px) {
-            .container {
-                grid-template-columns: 1fr; /* Uma coluna em telas menores */
-            }
-            .sidebar {
-                margin-top: 20px; /* Espaço acima da barra lateral */
-            }
-        }
-
-        /* Estilo da seção de patrocinadores */
-        .sponsor {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .sponsor img {
-            max-width: 150px; /* Largura máxima dos logos */
-            margin: 10px;
-        }
-        .contact-info {
-            max-width: 600px; /* Largura máxima da seção de contato */
-            margin: 20px auto; /* Centralizar a seção */
-            padding: 20px;
-            border: 1px solid #FBBF24;
-            border-radius: 10px;
-            background-color: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            text-align: center; /* Centralizar texto */
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS -->
 </head>
 <body>
     <header>
@@ -293,38 +134,6 @@
         <p>&copy; 2024 Go Stars E-Sports. Todos os direitos reservados.</p>
     </footer>
 
-    <script>
-        let currentIndexResults = 0;
-        let currentIndexCalendar = 0;
-
-        function moveCarousel(type, direction) {
-            const items = document.querySelectorAll(`#${type} .carousel-item`);
-            const totalItems = items.length;
-
-            if (type === 'resultados') {
-                currentIndexResults += direction;
-                if (currentIndexResults < 0) {
-                    currentIndexResults = totalItems - 1;
-                } else if (currentIndexResults >= totalItems) {
-                    currentIndexResults = 0;
-                }
-                updateCarousel('#resultados', items, currentIndexResults);
-            } else if (type === 'calendario') {
-                currentIndexCalendar += direction;
-                if (currentIndexCalendar < 0) {
-                    currentIndexCalendar = totalItems - 1;
-                } else if (currentIndexCalendar >= totalItems) {
-                    currentIndexCalendar = 0;
-                }
-                updateCarousel('#calendario', items, currentIndexCalendar);
-            }
-        }
-
-        function updateCarousel(carouselId, items, index) {
-            const carouselContent = document.querySelector(carouselId + ' .carousel-content');
-            const offset = -index * 100; // 100% para cada item
-            carouselContent.style.transform = 'translateX(' + offset + '%)';
-        }
-    </script>
+    <script src="script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
