--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
             <a href="#sobre">Sobre Nós</a>
             <a href="#patrocinadores">Patrocinadores e Parceiros</a>
             <a href="#galeria">Galeria de Arte</a>
-            <a href="#resultados">Resultados</a>
-            <a href="#calendario">Calendário de Campeonatos</a>
             <a href="#contato">Contato</a>
         </nav>
     </header>
@@ -29,10 +27,10 @@
                 <p>Nossos jogadores são a alma da Go Stars E-Sports. Cada um deles traz habilidades únicas e uma paixão inabalável pelos jogos. Com uma combinação de experiência e frescor, nossa equipe está sempre pronta para enfrentar novos desafios e se aprimorar a cada competição.</p>
                 <ul>
                     <li><strong>ASTTZIN</strong>: Especialista em estratégia e liderança, sempre guiando a equipe em momentos críticos.</li>
-                    <li><strong>Jogador 2</strong>: Um prodígio em reflexos rápidos, conhecido por suas jogadas impressionantes.</li>
+                    <li><strong>TOLED</strong>: Um prodígio em reflexos rápidos, conhecido por suas jogadas impressionantes.</li>
                     <li><strong>G4LVÃO</strong>: O suporte da equipe, garantindo que todos estejam sempre em sinergia e prontos para a ação.</li>
-                    <li><strong>Jogador 4</strong>: Rifler, vencedor do Torneio A, destaque no Campeonato B.</li>
-                    <li><strong>Jogador 5</strong>: Sniper, melhor jogador do Torneio C, MVP do Campeonato D.</li>
+                    <li><strong>KAYZER</strong>: Rifler, vencedor do Torneio A, destaque no Campeonato B.</li>
+                    <li><strong>STAY</strong>: Sniper, melhor jogador do Torneio C, MVP do Campeonato D.</li>
                 </ul>
                 <p>A Go Stars E-Sports é liderada por <strong>JAPA</strong>, um entusiasta de e-sports com vasta experiência no setor. Com uma visão clara e um compromisso com a excelência, JAPA tem trabalhado incansavelmente para construir uma equipe que não apenas compete, mas também inspira.</p>
                 <p>Nosso principal objetivo é conquistar títulos em campeonatos de e-sports, mas também buscamos promover a inclusão e a diversidade no mundo dos jogos. Queremos ser uma referência no cenário de e-sports, mostrando que a paixão e o trabalho em equipe podem levar a grandes conquistas.</p>
