--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 <h2>Resultados Recentes</h2>
                 <div class="carousel-content">
                     <div class="carousel-item">
-                        <h3>Campeonato A</h3>
-                        <p>Resultado: Vitória</p>
-                        <p>Data: 15/07/2024</p>
+                        <h3>REVOADA STARS CUP</h3>
+                        <p>Resultado: 2 LUGAR</p>
+                        <p>Data: 12/05/2024</p>
                     </div>
                     <div class="carousel-item">
                         <h3>Campeonato B</h3>
@@ -99,14 +99,14 @@
                 <h2>Calendário de Campeonatos</h2>
                 <div class="carousel-content">
                     <div class="carousel-item">
-                        <h3>Campeonato D</h3>
-                        <p>Data: 05/08/2024</p>
-                        <p>Local: Online</p>
+                        <h3>Balada Gamers Club</h3>
+                        <p>Data: 02/08/2024</p>
+                        <p>Local: GAMERS CLUB</p>
                     </div>
                     <div class="carousel-item">
-                        <h3>Campeonato E</h3>
-                        <p>Data: 12/08/2024</p>
-                        <p>Local: Arena XYZ</p>
+                        <h3>Allstar.gg Cup 2024</h3>
+                        <p>Data: 04/08/2024</p>
+                        <p>Local: GAMERS CLUB</p>
                     </div>
                     <div class="carousel-item">
                         <h3>Campeonato F</h3>
