--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h3>Entre em Contato</h3>
             <p>Para mais informações, entre em contato conosco:</p>
             <p>Email: <a href="mailto:contato@gostars.gg" style="color: #FBBF24;">contato@gostars.gg</a></p>
-            <p>Redes Sociais: <a href="https://www.instagram.com/gostars.gg" style="color: #FBBF24;">@gostars.gg</a></p>
+            <p>Redes Sociais: <a href="https://www.instagram.com/gostars.gg" style="color: #FBBF24;">INSTAGRAM</a></p>
         </section>
     </section>
     <footer>
